--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 	 <body>
 			<h1> DocType's Journal <h1>
 			<p> This is a collection of important details to know more about Dr. DocType <p>
-			<a href="https://hallarsis.github.io/Cesium-Lab1-Hallarsis/"> Visit this to see Dr DocType's Favorite Game Entitled "DEAD CELLS" </a>
+			<a href="games.html"> Visit this to see Dr DocType's Favorite Game Entitled "DEAD CELLS" </a>
 	 </body>
 </html>
