--- a/games.html
+++ b/games.html
@@ -28,13 +28,15 @@
 							   <li>Smooth Progression: Even in death, you retain valuable upgrades and knowledge that help you progress further with each attempt.</li>
 						 </ul>
 					</h3>
-					<p> Copyright &copy; Berlian Clyde Hallarsis 9-Cesium.</p>
+					
               </span>
 			  <span>
 					<h3> <em> Here are some screenshots of the game </em> </h3>
 					<img src= "DeadCells Screenshot.png" alt = "Screenshot1" height = "200px">
 					<img src= "DeadCells Screenshot2.png" alt = "Screenshot1" height = "200px">
 					<img src="DeadCells Screenshot3.png" alt = "Screenshot1" height = "200px">
+			  </span>
+			  <p> Copyright &copy; Berlian Clyde Hallarsis 9-Cesium.</p>
         </div>
       </body>
 </html>
